# ksplang

./: README.md  TODO.md  constants.py  execute.py  main.py  pyproject.toml
docs/: examples.md  programmer.md  user.md
docs/examples/: create_zero.in  create_zero.ksplang  sort.in
helpers/: tetr_test.py
instructions/: conftest.py  euclid_modulo.py  euclid_modulo_test.py  ff.py  ff_test.py  kpi.py  kpi_test.py  lroll.py  lroll_test.py  lswap.py  lswap_test.py  max.py  max_test.py  plusplus.py  plusplus_test.py  pop.py  pop2.py  pop2_test.py  pop_test.py  praise.py  praise_test.py  rem.py  rem_test.py  swap.py  swap_test.py  tetr.py  tetr_test.py  universal.py  universal_test.py
instructions/arithmetic/: cs.py  cs_test.py  euclid_modulo.py  median.py  median_test.py  plusplus.py  rem.py  rem_test.py  tetr.py  tetr_test.py  universal.py
instructions/stack/: ff.py  kpi.py  kpi_test.py  lroll.py  lswap.py  lswap_test.py  max.py  max_test.py  pop.py  pop2.py  pop2_test.py  praise.py  praise_test.py  swap.py  swap_test.py
integration_tests/: test_create_zero.py  test_duplicate.py  test_negate.py  test_sequence.py  test_sort.py  test_stack_size.py
src/ksplang/: constants.py  execute.py  executor.py  main.py  step.py
src/ksplang/helpers/: gcd.py  gcd_test.py  int64.py  mergesort.py  mergesort_test.py  solve_quadratic_equation.py  tetr.py
src/ksplang/instructions/: base_instruction.py  conftest.py
src/ksplang/instructions/arithmetic/: bitand.py  bitand_test.py  bitshift.py  bitshift_test.py  bulxor.py  bulxor_test.py  cs.py  cs_test.py  d.py  d_test.py  funkcia.py  (+19 more)
(+29 files in other folders)
